--- a/angular/01-cadastro-contatos/package.json
+++ b/angular/01-cadastro-contatos/package.json
@@ -23,16 +23,16 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "angular-in-memory-web-api": "~0.3.0",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
+    "rxjs": "5.4.3",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
+    "@types/node": "^6.0.90",
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "~2.1.0",
-    "@types/node": "^6.0.46"
+    "typescript": "~2.1.0"
   }
 }
