--- a/angular/01-cadastro-contatos/package.json
+++ b/angular/01-cadastro-contatos/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "angular-in-memory-web-api": "~0.3.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "rxjs": "5.4.3",
     "systemjs": "0.19.40",
